# oqa-search

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: pr.yaml
oqa_search/: oqa_search.py
tests/: conftest.py  test_aggregated_updates.py  test_build_checks.py  test_functions.py  test_main.py  test_single_incidents.py
tests/fixtures/: automake_build_checks_index.html  python_build_checks_index.html
